fix: api endpoints, swagger docs
